[gd_scene load_steps=16 format=2]

[ext_resource path="res://scn_scenes/scn_ObjectBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/level_0/scnI_Obj_Heart.gd" type="Script" id=2]
[ext_resource path="res://sfx_audio/f0_sfx_heart/sfx_heart_distorted01.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx_audio/f0_sfx_heart/sfx_heart_normal01.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx_audio/f0_sfx_pianochimes/sfx_pianochime_01_vem.wav" type="AudioStream" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.733333, 0.740741, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 0.266667, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
gravity = Vector3( 0, -10, 0 )
angular_velocity = 281.38
angular_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 76.26
scale = 5.0
scale_random = 1.0
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.392593, 0.948148, 1 )
colors = PoolColorArray( 0.784314, 0.627451, 0.392157, 1, 0.780392, 0.623529, 0.392157, 1, 0.784314, 0.627451, 0.392157, 0.180392, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, -146.403 ), 0.0, 0.0, 0, 0, Vector2( 1, 151.779 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 1
emission_sphere_radius = 21.6
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 1.0
orbit_velocity_random = 0.08
linear_accel_curve = SubResource( 7 )
angle = -99.3
angle_random = 0.32
scale_random = 0.14
scale_curve = SubResource( 9 )
color_ramp = SubResource( 5 )

[node name="I_Obj_Heart" instance=ExtResource( 1 )]
script = ExtResource( 2 )
default_noise = "res://sfx_audio/f0_sfx_heart/sfx_heart_normal01.wav"
distorted_noise_player_active = true
findable = true

[node name="Particles_black" type="Particles2D" parent="." index="0"]
amount = 60
lifetime = 3.0
explosiveness = 0.16
process_material = SubResource( 3 )

[node name="Particles_gold" type="Particles2D" parent="." index="1"]
visible = false
amount = 60
speed_scale = 0.2
explosiveness = 0.28
process_material = SubResource( 10 )

[node name="sfx2D_object" parent="." index="3"]
stream = ExtResource( 4 )

[node name="sfx2D_distorted" parent="." index="4"]
stream = ExtResource( 3 )
attenuation = 0.0384733

[node name="sfx_discovered" parent="." index="5"]
stream = ExtResource( 5 )
pitch_scale = 0.8

[node name="AnimatedSprite" parent="." index="7"]
scale = Vector2( 1, 1 )
animation = "heart_idle"

[node name="Timer_Particle" type="Timer" parent="." index="10"]
wait_time = 3.0
[connection signal="timeout" from="Timer_Particle" to="." method="_on_Timer_Particle_timeout"]
